--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,57 +1,34 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block style %}
-
+      <link rel="stylesheet" href="{% static 'my_site/styles/base.css' %}" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     {% endblock %}
     {% block scripts %}
-
-      {% comment %}Указываем, какой нам файл нужен{% endcomment %}
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-      <link rel="stylesheet" href="{% static 'my_site/styles/base.css' %}" />
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     {% endblock %}
     <title>{{ page_title }}</title>
   </head>
-  <body>
-    {% comment %}В шаблоне для шаблонов можно делать блоки, наследники могут{% endcomment %}
-    {% comment %}1. Не трогать их, тогда то, что указано в блоке будет сохранено;{% endcomment %}
-    {% comment %}2. Могут менять их -- тогда у блоков будет новое содержимое{% endcomment %}
+  <body class="container">
     <header>
-      <hr />
       {% block header %}
         {% include "base/menu.html" %}
-        {% comment %}Можно подключать код из одного шаблона в другой{% endcomment %}
       {% endblock %}
-      <hr />
     </header>
     <main>
-      <hr />
       {% block main %}
 
       {% endblock %}
-      <hr />
     </main>
     <footer>
-      <hr />
       {% block footer %}
-      <p>
-        ПЕРВЫЙ ФУТЕР 
-      </p>
+
       {% endblock %}
-      <hr />
-      {% block two_footer %}
-        <p>
-          ПУСТО
-        </p>
-      {% endblock  %}
-      <hr />
     </footer>
   </body>
 </html>
