--- a/templates/my_site/Fibbonacci_numbers.html
+++ b/templates/my_site/Fibbonacci_numbers.html
@@ -1,8 +1,22 @@
 {% extends "base/base.html" %}
 
 {% block main %}
-    <p>
-        {% lorem 1 b random %}
-    </p>
+    <div class="paragraph">
+        <p>
+            Числа Фибоначчи — это последовательность, где каждое число равно сумме двух предыдущих. 
+            Начинается последовательность с 0 и 1, и выглядит следующим образом: 
+            0, 1, 1, 2, 3, 5, 8, 13, 21, 34 и так до бесконечности. 
+            Названы в честь средневекового математика Леонардо Пизанского 
+            (известного как Фибоначчи) Эти числа тесно связаны с золотым сечением, 
+            так как отношение последовательных элементов стремится к φ. 
+            В природе ряды Фибоначчи можно обнаружить в расположении семян подсолнуха или лепестков цветов. 
+            Кроме того, такие закономерности используются для создания сбалансированных и эстетичных архитектурных решений. 
+            Даже структура галактик, таких как Млечный Путь, демонстрирует принципы Фибоначчи. 
+            Разумеется, такое необычное явление, как числа Фибоначчи, не может не привлекать внимание. 
+            Есть все же в этой строго выверенной закономерности что-то притягательное и даже таинственное. 
+            Неудивительно, что последовательность Фибоначчи так или иначе «засветилась» 
+            во многих произведениях современной массовой культуры самых разных жанров.
+        </p>
+    </div>
 {% endblock  %}
 
