--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -1,7 +1,12 @@
 {% extends 'base/base.html' %}
 
 {% block main %}
+<div class="paragraph">
   <p>
-    {% lorem 1 b random %}
+    Золотое сечение — деление целого (например, отрезка)
+    на такие части, которые соотносятся по следующему принципу:
+    большая часть относится к меньшей так же, как и вся величина 
+    (например, сумма двух отрезков) к большей части
   </p>
+</div>
 {% endblock %}
