--- a/templates/my_site/index.html
+++ b/templates/my_site/index.html
@@ -2,5 +2,13 @@
 {% comment %}Наследование шаблона для шаблонов{% endcomment %}
 
 {% block main %}
-  {% lorem 3 p random %}
+  <div class="paragraph">
+    <p>
+      Математика всегда играла важную роль в понимании мира, окружающего человека. Она помогает структурировать реальность, находить в ней закономерности и описывать явления, которые на первый взгляд кажутся хаотичными. Одним из наиболее интересных и удивительных аспектов математики является ее связь с понятием гармонии, которое отражается в природе, искусстве, архитектуре и даже музыке. Гармония — это универсальное стремление к порядку, симметрии, пропорциям и балансу, что с давних времен привлекает внимание математиков, философов и деятелей искусства.
+Эта связь между математикой и гармонией проявляется в различных формах. Например, концепция золотого сечения, известная также как божественная пропорция, широко используется в архитектуре и живописи для создания эстетически приятных композиций. Пропорции, основанные на золотом сечении, воспринимаются людьми как наиболее гармоничные и естественные. В природе же эти математические закономерности находят отражение в таких структурах, как спирали раковин или расположение листьев на растениях.
+Числа Фибоначчи, еще один математический феномен, связанный с гармонией, встречаются как в природе, так и в искусстве. Эти числа можно увидеть в структуре цветов, спиралях галактик, а также в творениях людей, которые стремятся создать что-то, что воспринимается как сбалансированное и гармоничное.
+В ходе исследования будут изучены основные принципы математической гармонии, такие как золотое сечение и числа Фибоначчи, а также рассмотрены их проявления в природе и искусстве. Проект направлен на то, чтобы показать, каким образом математические законы формируют наше восприятие красоты и гармонии.
+
+    </p>
+  </div>
 {% endblock %}
