--- a/static/my_site/styles/base.css
+++ b/static/my_site/styles/base.css
@@ -1,9 +1,12 @@
 header {
     font-size: 20px;
+    color: white;
+    background-color: white;
 }
 
 main {
     font-size: 30px;
+    color: white;
 } 
 
 .paragraph {
@@ -12,6 +15,7 @@ main {
 }
 
 body {
-    background-color:blue; /* Голубой цвет */
-    min-height: 100vh;
+    background: url(../../images/background.jpg);
+    /* background-color:blue;  Голубой цвет 
+    min-height: 100vh; */
 }
