--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -9,4 +9,14 @@
     (например, сумма двух отрезков) к большей части
   </p>
 </div>
+<div>
+  <div class="card" style="width: 18rem;">
+    <img src="../../static/images/card1.png" class="card-img-top" alt="">
+    <div class="card rounded-3" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Отношение в золотом сечении</h5>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
