--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -30,6 +30,11 @@
           
         {% endblock %}
       </div>
+      <div class="container">
+        {% block card %}
+        
+        {% endblock  %}
+      </div>
     </main>
     <footer>
       <div class="container">
