--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -9,6 +9,8 @@
     (например, сумма двух отрезков) к большей части
   </p>
 </div>
+{% endblock %}
+{% block card %}
 <div>
   <div class="card" style="width: 18rem;">
     <img src="../../static/images/card1.png" class="card-img-top" alt="">
