--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -35,6 +35,11 @@
         
         {% endblock  %}
       </div>
+      <div class="container">
+        {% block main2 %}
+        
+        {% endblock %}
+      </div>
     </main>
     <footer>
       <div class="container">
