--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -6,7 +6,7 @@
     Золотое сечение — деление целого (например, отрезка)
     на такие части, которые соотносятся по следующему принципу:
     большая часть относится к меньшей так же, как и вся величина 
-    (например, сумма двух отрезков) к большей части
+    (например, сумма двух отрезков) к большей части.
   </p>
 </div>
 {% endblock %}
@@ -19,6 +19,24 @@
         <h5 class="card-title">Отношение в золотом сечении</h5>
       </div>
     </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block main2 %}
+<div class="paragraph">
+  <div>
+    <p>
+      обозначается буквой φ (фи). Если описывать золотое сечение приблизительно,
+      оно представляет собой пропорциональное деление на две неравных части:
+      примерно 62% и 38%. В числовом выражении золотое сечение представляет
+      собой число 1,6180339887. Оно используется для создания композиций,
+      воспринимаемых как гармоничные. Золотое сечение встречается в архитектуре, 
+      например, в пропорциях Парфенона или пирамиды Хеопса. В искусстве, такие
+      мастера как Леонардо да Винчи использовали его для расположения элементов,
+      как в "Мона Лизе". Природа также демонстрирует эту пропорцию, 
+      например, в структуре ветвей деревьев или форме раковин моллюсков.
+    </p>
   </div>
 </div>
 {% endblock %}
