--- a/templates/my_site/fractals.html
+++ b/templates/my_site/fractals.html
@@ -7,5 +7,16 @@
 Фракталы, как проявление гармонии, демонстрируют сложность и упорядоченность одновременно. Эти удивительные геометрические фигуры, само подобные и повторяющиеся на разных масштабах, можно увидеть в природе — в узорах снежинок, ветвлении деревьев или очертаниях береговых линий. Фракталы показывают, как простые закономерности могут создавать удивительные формы, отражая гармонию через повторение и вариативность.
 
     </p>
+    <img src="../static/images/fractal.png" class="rounded float-end" alt="My Image">
+    <img src="../static/images/fractal2.png" class="rounded float-start" width="550" height="550" alt="My Image">
+    {% comment %} <div class="card" style="width: 18rem;">
+        <img src="../../static/images/fractal.png" class="card-img-top" alt="">
+        <div class="card rounded-3" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Отношение в золотом сечении</h5>
+          </div>
+        </div>
+      </div> {% endcomment %}
+    {% comment %} <img src='../../images/fractal.png' alt="123"> {% endcomment %}
 </div>
 {% endblock  %}
