add golden_ratio picture

--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -25,7 +25,7 @@
 
 {% block main2 %}
 <div class="paragraph">
-  <div>
+  <div class="rounded mx-auto d-block">
     <p>
       обозначается буквой φ (фи). Если описывать золотое сечение приблизительно,
       оно представляет собой пропорциональное деление на две неравных части:
@@ -38,5 +38,11 @@
       например, в структуре ветвей деревьев или форме раковин моллюсков.
     </p>
   </div>
+  <div>
+    <img src="../static/images/Golden_ratio.png" class="rounded mx-auto d-block" alt="My Image">
+  </div>
+
 </div>
+
+
 {% endblock %}
