repositioned the pictures

--- a/templates/my_site/Fibbonacci_numbers.html
+++ b/templates/my_site/Fibbonacci_numbers.html
@@ -2,6 +2,9 @@
 
 {% block main %}
     <div class="paragraph">
+        <div>
+            <img src="../static/images/fibbonachi_numbers.png" class="rounded float-end" alt="My Image">
+        </div>
         <p>
             Числа Фибоначчи — это последовательность, где каждое число равно сумме двух предыдущих. 
             Начинается последовательность с 0 и 1, и выглядит следующим образом: 
