--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -25,6 +25,9 @@
 
 {% block main2 %}
 <div class="paragraph">
+  <div>
+    <img src="../static/images/Golden_ratio.png" class="rounded float-end" alt="My Image">
+  </div>
   <div class="rounded mx-auto d-block">
     <p>
       обозначается буквой φ (фи). Если описывать золотое сечение приблизительно,
@@ -39,7 +42,7 @@
     </p>
   </div>
   <div>
-    <img src="../static/images/Golden_ratio.png" class="rounded mx-auto d-block" alt="My Image">
+    {% comment %} <img src="../static/images/Golden_ratio.png" class="rounded mx-auto d-block" alt="My Image"> {% endcomment %}
   </div>
 
 </div>
