--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -15,10 +15,22 @@
   <div class="card" style="width: 18rem;">
     <img src="../../static/images/card1.png" class="card-img-top" alt="">
     <div class="card rounded-3" style="width: 18rem;">
-      <div class="card-body">
+      <div class~="card-body">
         <h5 class="card-title">Отношение в золотом сечении</h5>
       </div>
+
     </div>
+    
+  </div>
+  <img src="../static/images/Golden_Ratio_2.png" class="rounded float-end" alt="image">
+  <div>
+    
+  </div>
+  
+</div>
+<div>
+  <div >
+    {% comment %} <img src="../static/images/Golden_Ratio_2.png" class="rounded float-end" alt="image"> {% endcomment %}
   </div>
 </div>
 {% endblock %}
@@ -26,7 +38,7 @@
 {% block main2 %}
 <div class="paragraph">
   <div>
-    <img src="../static/images/Golden_ratio.png" class="rounded float-end" alt="My Image">
+    {% comment %} <img src="../static/images/Golden_ratio.png" class="rounded float-end" alt="My Image"> {% endcomment %}
   </div>
   <div class="rounded mx-auto d-block">
     <p>
