--- a/static/my_site/styles/base.css
+++ b/static/my_site/styles/base.css
@@ -1,12 +1,13 @@
 header {
+    
     font-size: 20px;
-    color: white;
-    background-color: white;
+    color: rgb(255, 0, 0);
+    background-color: rgb(222, 210, 115);
 }
 
 main {
     font-size: 30px;
-    color: white;
+    color: rgb(108, 108, 108);
 }
 
 main2 {
