--- a/templates/my_site/fractals.html
+++ b/templates/my_site/fractals.html
@@ -1,4 +1,17 @@
 {% extends 'base/base.html' %}
+{% load static %}
+
+{% block style %}
+    <link rel="stylesheet" href="{% static 'my_site/styles/background1.css' %}">
+    <link rel="stylesheet" href="{% static 'my_site/styles/base.css' %}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+{% endblock style %}
+<div class="container">
+    <div class="bg-container">
+      <div class="vector-bg">
+      </div>
+    </div>
+</div>
 
 {% block main %}
 <div class="paragraph">
