fix size picture

--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -29,7 +29,7 @@
 {% block card %}
 <div>
   <div class="card" style="width: 18rem;">
-    <img src="../../static/images/card1.png" class="card-img-top" alt="">
+    <img src="../../static/images/card1.png" class="card-img-top" alt="" >
     <div class="card rounded-3" style="width: 18rem;">
       <div class~="card-body">
         <h5 class="card-title">Отношение в золотом сечении</h5>
@@ -38,7 +38,7 @@
     </div>
     
   </div>
-  <img src="../static/images/Golden_Ratio_2.png" class="rounded float-end" alt="image">
+  <img src="../static/images/Golden_Ratio_2.png" class="rounded float-end" alt="image" style="width: 50%; max-width: 600px; height: auto;">
   <div>
     
   </div>
