--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -10,6 +10,11 @@
       <link rel="stylesheet" href="{% static 'my_site/styles/base.css' %}" />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     {% endblock %}
+    {% block scripts %}
+    <script src="{% static 'my_site/js/background.js' %}"></script>
+    {% endblock scripts %}
+
+
     <title>{{ page_title }}</title>
   </head>
   <body>
