--- a/templates/my_site/Fibbonacci_numbers.html
+++ b/templates/my_site/Fibbonacci_numbers.html
@@ -3,7 +3,7 @@
 {% block main %}
     <div class="paragraph">
         <div>
-            <img src="../static/images/fibbonachi_numbers.png" class="rounded float-end" alt="My Image">
+            <img src="../static/images/fibbonachi_numbers.png" class="rounded float-end" alt="My Image" style="width: 50%; max-width: 600px; height: auto;">
         </div>
         <p>
             Числа Фибоначчи — это последовательность, где каждое число равно сумме двух предыдущих. 
