add new pictures

--- a/templates/my_site/Fibbonacci_numbers.html
+++ b/templates/my_site/Fibbonacci_numbers.html
@@ -20,6 +20,7 @@
     <div class="paragraph">
         <div>
             <img src="../static/images/fibbonachi_numbers.png" class="rounded float-end" alt="My Image" style="width: 50%; max-width: 600px; height: auto;">
+            
         </div>
         <p>
             Числа Фибоначчи — это последовательность, где каждое число равно сумме двух предыдущих. 
@@ -29,13 +30,24 @@
             (известного как Фибоначчи) Эти числа тесно связаны с золотым сечением, 
             так как отношение последовательных элементов стремится к φ. 
             В природе ряды Фибоначчи можно обнаружить в расположении семян подсолнуха или лепестков цветов. 
+        </p>
+        <div>
+            <img src="../static/images/Fibbonachi2.png" class="rounded float-end" alt="My Image" style="width: 50%; max-width: 600px; height: auto;">
+        </div>
+        <p>
             Кроме того, такие закономерности используются для создания сбалансированных и эстетичных архитектурных решений. 
             Даже структура галактик, таких как Млечный Путь, демонстрирует принципы Фибоначчи. 
             Разумеется, такое необычное явление, как числа Фибоначчи, не может не привлекать внимание. 
             Есть все же в этой строго выверенной закономерности что-то притягательное и даже таинственное. 
+        </p>
+        
+        <p>
+            
+            
             Неудивительно, что последовательность Фибоначчи так или иначе «засветилась» 
             во многих произведениях современной массовой культуры самых разных жанров.
         </p>
     </div>
 {% endblock  %}
 
+Fibbonachi1.jpg
