--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -39,7 +39,9 @@
     
   </div>
   <img src="../static/images/Golden_Ratio_2.png" class="rounded float-end" alt="image" style="width: 50%; max-width: 600px; height: auto;">
+
   <div>
+    
     
   </div>
   
@@ -63,6 +65,12 @@
       примерно 62% и 38%. В числовом выражении золотое сечение представляет
       собой число 1,6180339887. Оно используется для создания композиций,
       воспринимаемых как гармоничные. Золотое сечение встречается в архитектуре, 
+    </p>
+    <div>
+      <img src="../static/images/Fibbonachi1.jpg" class="rounded float-end" alt="My Image" style="width: 50%; max-width: 600px; height: auto;">
+  </div>
+    <p>
+      
       например, в пропорциях Парфенона или пирамиды Хеопса. В искусстве, такие
       мастера как Леонардо да Винчи использовали его для расположения элементов,
       как в "Мона Лизе". Природа также демонстрирует эту пропорцию, 
