--- a/templates/my_site/index.html
+++ b/templates/my_site/index.html
@@ -3,7 +3,27 @@
 
 {% block main %}
   <div class="paragraph">
-    <p>
+    <p>Математика играет фундаментальную роль в познании закономерностей окружающего мира. 
+      Её методы позволяют систематизировать явления, выявлять структурные взаимосвязи и 
+      формализовать процессы, которые на первый взгляд кажутся хаотичными. 
+      Одним из наиболее значимых аспектов математики является её связь с принципами гармонии, 
+      проявляющимися в архитектуре, изобразительном искусстве, музыке и естественных науках.</p>
+
+    <p>Золотое сечение (φ ≈ 1,618) представляет собой ключевую пропорцию, обеспечивающую 
+      эстетическую завершённость форм. Данная закономерность наблюдается в античной и современной архитектуре 
+      (Парфенон, работы Ле Корбюзье), классической живописи («Мона Лиза» Леонардо да Винчи), 
+      а также в биологических структурах (раковина наутилуса, расположение семян подсолнечника).</p>
+
+    <p>Последовательность Фибоначчи (0, 1, 1, 2, 3, 5, 8...) 
+      демонстрирует тесную взаимосвязь математики с природными явлениями. 
+      Данный числовой ряд определяет морфологию растений
+      (расположение листьев, лепестков), структуру галактик
+      и даже анатомические пропорции живых организмов.</p>
+
+    <p>Фрактальная геометрия предоставляет математический аппарат для описания сложных самоподобных структур,
+      встречающихся в природных системах. Фракталы моделируют формы горных хребтов,
+      русла рек, кроны деревьев и систему кровообращения, подтверждая универсальность математических законов.</p>
+    {% comment %} <p>
       Математика всегда играла важную роль в понимании мира, окружающего человека. 
       Она помогает структурировать реальность, находить в ней закономерности и описывать явления, 
       которые на первый взгляд кажутся хаотичными. Одним из наиболее интересных и 
@@ -28,7 +48,7 @@
       в природе и искусстве. Проект направлен на то, чтобы показать, каким образом 
       математические законы формируют наше восприятие красоты и гармонии.
 
-    </p>
+    </p> {% endcomment %}
     <img src="../static/images/main1.png" class="rounded float-end" 
     alt="My Image"  style="width: 50%; max-width: 600px; height: auto;">
     <img src="../static/images/main2.png" class="rounded float-start" 
