bolded the text

--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -19,7 +19,7 @@
 {% block main %}
 <div class="paragraph">
   <p>
-    Золотое сечение — деление целого (например, отрезка)
+    <b>Золотое сечение</b> — деление целого (например, отрезка)
     на такие части, которые соотносятся по следующему принципу:
     большая часть относится к меньшей так же, как и вся величина 
     (например, сумма двух отрезков) к большей части.
