--- a/templates/my_site/index.html
+++ b/templates/my_site/index.html
@@ -9,18 +9,18 @@
       Одним из наиболее значимых аспектов математики является её связь с принципами гармонии, 
       проявляющимися в архитектуре, изобразительном искусстве, музыке и естественных науках.</p>
 
-    <p>Золотое сечение (φ ≈ 1,618) представляет собой ключевую пропорцию, обеспечивающую 
+    <p><b>Золотое сечение</b> (φ ≈ 1,618) представляет собой ключевую пропорцию, обеспечивающую 
       эстетическую завершённость форм. Данная закономерность наблюдается в античной и современной архитектуре 
       (Парфенон, работы Ле Корбюзье), классической живописи («Мона Лиза» Леонардо да Винчи), 
       а также в биологических структурах (раковина наутилуса, расположение семян подсолнечника).</p>
 
-    <p>Последовательность Фибоначчи (0, 1, 1, 2, 3, 5, 8...) 
+    <p><b>Последовательность Фибоначчи</b> (0, 1, 1, 2, 3, 5, 8...) 
       демонстрирует тесную взаимосвязь математики с природными явлениями. 
       Данный числовой ряд определяет морфологию растений
       (расположение листьев, лепестков), структуру галактик
       и даже анатомические пропорции живых организмов.</p>
 
-    <p>Фрактальная геометрия предоставляет математический аппарат для описания сложных самоподобных структур,
+    <p><b>Фрактальная геометрия</b> предоставляет математический аппарат для описания сложных самоподобных структур,
       встречающихся в природных системах. Фракталы моделируют формы горных хребтов,
       русла рек, кроны деревьев и систему кровообращения, подтверждая универсальность математических законов.</p>
     {% comment %} <p>
