--- a/templates/my_site/Fibbonacci_numbers.html
+++ b/templates/my_site/Fibbonacci_numbers.html
@@ -23,7 +23,7 @@
             
         </div>
         <p>
-            Числа Фибоначчи — это последовательность, где каждое число равно сумме двух предыдущих. 
+            <b>Числа Фибоначчи</b> — это последовательность, где каждое число равно сумме двух предыдущих. 
             Начинается последовательность с 0 и 1, и выглядит следующим образом: 
             0, 1, 1, 2, 3, 5, 8, 13, 21, 34 и так до бесконечности. 
             Названы в честь средневекового математика Леонардо Пизанского 
