--- a/templates/my_site/fractals.html
+++ b/templates/my_site/fractals.html
@@ -17,8 +17,16 @@
 {% block main %}
 <div class="paragraph">
     <p>
-        Фрактал — это математическая структура, которая характеризуется самоподобием. Так называются схожие элементы, повторяющиеся на разных масштабах. Фракталы широко используются в математике, компьютерной графике, различных природных и социальных явлениях. Они позволяют моделировать сложные структуры, которые иначе было бы трудно описать, такие как формы гор, облаков или деревьев.
-Фракталы, как проявление гармонии, демонстрируют сложность и упорядоченность одновременно. Эти удивительные геометрические фигуры, само подобные и повторяющиеся на разных масштабах, можно увидеть в природе — в узорах снежинок, ветвлении деревьев или очертаниях береговых линий. Фракталы показывают, как простые закономерности могут создавать удивительные формы, отражая гармонию через повторение и вариативность.
+        <b>Фрактал</b> — это математическая структура, которая характеризуется самоподобием. 
+        Так называются схожие элементы, повторяющиеся на разных масштабах. Фракталы 
+        широко используются в математике, компьютерной графике, различных природных
+        и социальных явлениях. Они позволяют моделировать сложные структуры, которые
+        иначе было бы трудно описать, такие как формы гор, облаков или деревьев. 
+        Фракталы, как проявление гармонии, демонстрируют сложность и упорядоченность 
+        одновременно. Эти удивительные геометрические фигуры, само подобные и 
+        повторяющиеся на разных масштабах, можно увидеть в природе — в узорах снежинок, 
+        ветвлении деревьев или очертаниях береговых линий. Фракталы показывают, как простые 
+        закономерности могут создавать удивительные формы, отражая гармонию через повторение и вариативность.
 
     </p>
     <img src="../static/images/fractal.png" class="rounded float-end" 
