--- a/templates/my_site/Golden_Ratio.html
+++ b/templates/my_site/Golden_Ratio.html
@@ -62,7 +62,7 @@
     <p>
       обозначается буквой φ (фи). Если описывать золотое сечение приблизительно,
       оно представляет собой пропорциональное деление на две неравных части:
-      примерно 62% и 38%. В числовом выражении золотое сечение представляет
+      <u>примерно 62% и 38%.</u> В числовом выражении золотое сечение представляет
       собой число 1,6180339887. Оно используется для создания композиций,
       воспринимаемых как гармоничные. Золотое сечение встречается в архитектуре, 
     </p>
